# dnspod-lib

./: Cargo.toml  README.md
ddnspod/: Cargo.toml  README.md
ddnspod/src/: args.rs  main.rs
dnspod-cli/: Cargo.toml  README.md
dnspod-cli/src/: args.rs  main.rs  utils.rs
dnspoddns/: Cargo.toml  README.md
dnspoddns/src/: main.rs  utils.rs
src/: action.rs  consts.rs  data_types.rs  error_code.rs  header_params.rs  lib.rs  response.rs  signature.rs  utils.rs
src/domain/: describe_domain_list.rs  mod.rs
src/macros/: README.md  mod.rs
src/record/: create_record.rs  delete_record.rs  describe_record.rs  describe_record_list.rs  mod.rs  modify_dynamic_dns.rs  modify_record.rs
