[package]
name = "ddnspod"
version = "0.1.3"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "A ddns cli for dnspod"
keywords = ["dnspod", "ddns", "ddnspod"]
license = "MIT"
repository = "https://github.com/hangj/dnspod-lib"
documentation = "https://docs.rs/ddnspod/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

[dependencies]
dnspod-lib = { version = "0.1.11" }
# dnspod-lib = { path = ".." }
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive", "string", "env"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
rand = "0.8.5"
