[package]
name = "dnspod-cli"
version = "0.1.2"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "A command line tool for dnspod"
keywords = ["dnspod", "ddns", "dnspod-cli"]
license = "MIT"
repository = "https://github.com/hangj/dnspod-lib"
documentation = "https://docs.rs/dnspod-cli/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

[dependencies]
dnspod-lib = { version = "0.1.10", features = ["clap"]}
# dnspod-lib = { path = "..", features = ["clap"]}
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
clap = { version = "4.4.2", features = ["derive", "string", "env"] }
# rand = "0.8.5"
